# neb-dynamics

./: .gitignore  .gitmodules  404.html  =0.7.2  ALS.py  ALS_xtb.py  NEB.py  NEB_to_be.ipynb  NEB_to_be.py  NEB_xtb.py  README.md  animation.py  chain_classes.py  connect_server_21.sh  create_neb_from_geodesic.py  default_inputs.toml  environment.yml  example_run.py  example_run_radical_thing.py  exports.sh  foobar.toml  for_garetx.toml  index.html  mail.py  minimal_functions.py  mkdocs.yml  msmep_example.py  neb_playground.py  objects.inv  out_ASNEB  out_fsm_linear  outserv  parallel_computing.py  pyproject.toml  refactored_example.py  refactored_example_xtb.py  render.yaml  run_ireland_claisen.py  sitemap.xml  t3d_attempt.py  (+2 more)
TS/: TS_PRFO.py  dimer.py  foobar_dimer.py
Tutorial/: index.html
about/: index.html
api/: index.html
chunge/: default_inputs.toml  out_rxn_traj_TeraChem_aldehyde5_PCM  teradft-pcm.toml  teradft-pcm_status.json  teraxtb-gas.toml  teraxtb-gas_status.json  teraxtb-pcm.toml  teraxtb-pcm_status.json  xtb-gas_status.json
cli/: index.html
colton/: index.html
concepts/: index.html
docs/: Tutorial.md  about.md  api.md  cli.md  concepts.md  drive_remote.md  elementarystep.md  engines.md  index.md  inputs.md  installation.md  msmep.md  neb.md  tdstructure.md  tutorial.md
drive_remote/: index.html
elementarystep/: index.html
engines/: index.html
example_cases/: neb_tutorial.py  plots.py  tutorial01_TDStructures.py  tutorial02_Trajectory.py  tutorial02_trajectory.py  tutorial03_nodes_and_chains.py  tutorial04_NEBs.py
examples/: 01_simple_neb.py  02_climbing_image_neb.py  03_msmep.py  04_custom_convergence.py  dakin_oh_network.json  debug_status.json  demo.toml  dft.toml  dft_cu.toml  dumb.toml  end_oxycope.xyz  end_wittig.xyz  example_inputs.toml  mep_output_parallel_msmep_status.json  out_aac_dft  out_cuaac_dft  oxycope_recursive_bench_status.json  oxycope_status.json  qmmm_inputs.toml  retropaths_cache_demo.py  run_oxycope.sh  run_qmmm_cc.py  run_wittig.sh  start_oxycope.xyz  start_wittig.xyz  wittig_ph_status.json
foobar/: neb-f0.out  neb-settings-f0.toml
geodesic_interpolation/: coord_utils.py  geodesic.py  interpolation.py
inputs/: index.html
installation/: index.html
msmep/: index.html
neb/: index.html
neb_dynamics/: ALS.py  ALS_xtb.py  Chain.py  ChainBiaser.py  CompetitorAnalyzer.py  HistoryTree.py  Inputs.py  Janitor.py  MSMEP.py  MSMEPAnalyzer.py  NEB.py  NEB_TCDLF.py  NEB_xtb.py  NetworkBuilder.py  Node.py  Node2d.py  Node3D.py  Node3D_TC.py  Node3D_TC_Local.py  Node3D_TC_TCPB.py  Node3d.py  OBH.py  Optimizer.py  ReactionProfileGenerator.py  Refiner.py  TS_PRFO.py  TreeNode.py  __init__.py  analysis.py  animation.py  arbalign.py  chain.py  chain_classes.py  chainhelpers.py  constants.py  convergence_helpers.py  d3_tools.py  default_inputs.toml  elementarystep.py  elements.py  (+37 more)
notebooks/: AseOptimizers.py  Baeyer–Villiger.py  DA_correct.py  DavidDumas.py  NMA_dean.py  PDDA_repro.py  PES.py  Paralelize.py  TS_opt.py  alex_big_path.py  alex_change_mtd.py  analysis_of_geometry_spawning.py  automated_mechanism_generation.py  bredts_rule.py  compare_method.py  comparisons.py  create_neb_from_geodesic.py  dataset_preparation.py  dean_photochem_project.py  debug_parallelization.py  dimer_ASE.py  dimer_method.py  ensure_elementary_steps.py  geodesic_cost_function.py  gi_filter.py  hello_martin.py  hess_law.py  hey_dean.py  isomorphisms.py  jax_geodesic.py  jax_geodesic_stuff.py  make_asneb_figure.py  make_early_stop_figure.py  make_lobry_figure.py  make_wittig_main_figure.py  minimal_functions.py  msmep_playground.py  msmep_q_and_a.py  neb_playground.py  parallel_computing.py  (+10 more)
publication-data/: expensive.toml  optimize_neb_convergence_sweep.py
scripts/: cleanup_tree.py  create_cleanup_nebs.py  create_cneb_from_geodesic.py  create_cneb_msmep_from_geodesic.py  create_dft_profile_from_msmep.py  create_msmep_from_endpoints.py  create_msmep_from_geodesic.py  create_msmep_from_geodesic_TCPB.py  create_msmep_from_geodesic_TC_local.py  create_msmep_from_rxn_name.py  create_neb_from_endpoints.py  create_neb_from_geodesic.py  create_neb_from_xtb_seed.py  get_fixed_interpolation.py  optimize_geometry.py  refine_msmep.py  run_comparison_analysis.py  start_render_drive.sh
tests/: data.json  (+46 more)
(+5685 files in other folders)
