[tool.poetry]
name = "neb-dynamics"
version = "0.1.0"
description = "Package for minimization of MEPs and reaction path exploration"
authors = ["Jan <janestrada7@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
matplotlib = "^3.9.1"
scipy = "<1.14"
openbabel-wheel = "^3.1.1.19"
pandas = "^2.2.2"
pysmiles = "^1.1.2"
rdkit = "^2024.3.3"
py3dmol = "^2.2.0"
qcop = "^0.7.1"
ase = "^3.23.0"
chemcloud = "^0.10.0"
xtb = "^22.1"
cairosvg = "^2.7.1"
timeout-timer = "^0.2.0"
biopython = "^1.84"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
