[tool.poetry]
name = "neb-dynamics"
version = "0.1.0"
description = "Package for minimization of MEPs and reaction path exploration"
authors = ["Jan <janestrada7@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
matplotlib = "^3.9.1"
scipy = "<1.14"
openbabel-wheel = "^3.1.1.19"
pandas = "^2.2.2"
pysmiles = "^1.1.2"
rdkit = "^2024.3.3"
py3dmol = "^2.2.0"
ase = "^3.23.0"
xtb = "^22.1"
cairosvg = "^2.7.1"
timeout-timer = "^0.2.0"
biopython = "^1.84"
nodejs = "^0.1.1"
jupytext = "^1.16.3"
sella = "^2.3.4"
pydantic = "^2.8.2"
scikit-learn = "^1.5.1"
setuptools = "^70.3.0"
geometric = "^1.0.2"
qcop = "^0.8.0"
qcio = {extras = ["view"], version = "^0.11.0"}
chemcloud = "^0.11.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
autopep8 = "^2.3.1"
rxnmapper = "^0.3.0"  # needed for NetworkBuilder is you want smi->smi network
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
tqdm = "^4.66.4"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.29"
markdown-include = "^0.8.1"
pymdown-extensions = "^10.8.1"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
